# c501checkers

./: CMakeLists.txt  ChangeLog  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.in  os
debian/: Makefile.in  changelog  control  copyright  rules
innoSetup/: Makefile.in  setup.iss
src/: 0_cbProj.cbp  App.cpp  App.hpp  AppConfig.hpp  DialogAbout.cpp  DialogAbout.hpp  DialogConfig.cpp  DialogConfig.hpp  MainFrame.cpp  MainFrame.hpp  MainPanel.cpp  MainPanel.hpp  Makefile.am  Makefile.in  SfmlBoard.cpp  SfmlBoard.hpp  c501checkers.1  config.hpp  findFile.cpp  findFile.hpp  installDll.sh  rc.rc  strWxStdConv.cpp  strWxStdConv.hpp  wxSFMLCanvas.cpp  wxSFMLCanvas.hpp
src/checkers/: Board.cpp  Board.hpp  Makefile.am  Makefile.in  Mvt.cpp  Mvt.hpp  MyException.cpp  MyException.hpp  nbStrConvert.hpp
src/data/: Makefile.am  Makefile.in
src/linux-menu/: Makefile.in  c501checkers.desktop
src/locale/: Makefile.in  default.mo  default.po
src/locale/fr/: Makefile.in
src/locale/fr/LC_MESSAGES/: Makefile.in  trad.mo  trad.po
src/win32/: Makefile.in  winProg.manifest
